k8s/activity-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: activity-service
  namespace: banking
spec:
  replicas: 1
  selector:
    matchLabels:
      app: activity-service
  template:
    metadata:
      labels:
        app: activity-service
    spec:
      containers:
      - name: activity-service
        image: olawale9/activity-service:1.0 
        ports:
        - containerPort: 8001
        resources:
          limits:
            memory: "256Mi"
            cpu: "500m"
        livenessProbe:
          httpGet:
            path: /health
            port: 8001
          initialDelaySeconds: 15
