k8s/transaction-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: transaction-service
  namespace: banking
spec:
  replicas: 2
  selector:
    matchLabels:
      app: transaction-service
  template:
    metadata:
      labels:
        app: transaction-service
    spec:
      containers:
        - name: transaction-service
          image: olawale9/transaction-service:1.4
          ports:
            - name: http
              containerPort: 8080
          resources:
            requests:
              cpu: "200m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 90
            periodSeconds: 20
---
apiVersion: v1
kind: Service
metadata:
  name: transaction-service
  namespace: banking
  labels:
    app: transaction-service
    prometheus-monitoring: "true"
spec:
  selector:
    app: transaction-service
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
