k8s/user-service-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-service
  namespace: banking
  labels:
    app: user-service
spec:
  type: ClusterIP
  selector:
    app: user-service
  ports:
    - name: http
      protocol: TCP
      port: 8000
      targetPort: 8000
