k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: banking-ingress-api
  namespace: banking
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - techbleatglobalbank.duckdns.org
      secretName: techbleatglobalbank-tls
  rules:
    - host: techbleatglobalbank.duckdns.org
      http:
        paths:
          - path: /api/users(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: user-service
                port:
                  number: 8000
          - path: /api/transactions(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: transaction-service
                port:
                  number: 8080
          - path: /api/activities(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: activity-service-external
                port:
                  number: 8001
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: banking-ingress-frontend
  namespace: banking
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - techbleatglobalbank.duckdns.org
      secretName: techbleatglobalbank-tls
  rules:
    - host: techbleatglobalbank.duckdns.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 3000
